<resources>
    <string name="app_name">bank_card</string>
    <string name="enter_the_first_digits_of_a_card_number_bin_iin">Enter the first digits of a card number (BIN/IIN)</string>
    <string name="scheme_network">Scheme / network</string>
    <string name="brand">BRAND</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="type">TYPE</string>
    <string name="prepaid">Prepaid</string>
    <string name="country">COUNTRY</string>
    <string name="bank">BANK</string>
    <string name="check">Check</string>
    <string name="history">HISTORY</string>
</resources>