<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_first_digits_of_a_card_number_bin_iin"
        android:layout_centerInParent="true"
        android:id="@+id/et_bin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheme_network"
        android:layout_below="@id/et_bin"
        android:layout_marginTop="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:id="@+id/tv_z_Scheme"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_z_Scheme"
        android:layout_marginTop="5dp"
        android:id="@+id/tv_Scheme"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        android:layout_below="@id/tv_Scheme"
        android:layout_marginTop="15dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:id="@+id/tv_z_Brand"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_z_Brand"
        android:layout_marginTop="5dp"
        android:id="@+id/tv_Brand"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_number"
        android:layout_below="@id/tv_Brand"
        android:layout_marginTop="15dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:id="@+id/tv_z_CardNumber"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_z_Scheme"
        android:layout_marginTop="5dp"
        android:id="@+id/tv_CardNumber"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:layout_below="@id/et_bin"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_z_type"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_z_type"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"

        android:id="@+id/tv_type"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prepaid"
        android:layout_below="@id/tv_type"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"

        android:id="@+id/tv_z_Prepaid"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_z_Prepaid"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"

        android:id="@+id/tv_Prepaid"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:layout_below="@id/tv_Prepaid"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"

        android:id="@+id/tv_z_Country"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_z_Country"
        android:layout_marginTop="5dp"
       android:layout_centerHorizontal="true"
        android:id="@+id/tv_country"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bank"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="50dp"
        android:layout_below="@id/et_bin"
        android:id="@+id/tv_z_Bank"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_z_Bank"
        android:layout_marginEnd="25dp"
        android:layout_toEndOf="@id/tv_z_type"
        android:layout_marginStart="30dp"
        android:layout_alignParentEnd="true"
        />




</RelativeLayout>